--- a/themes/appton/layouts/index.html
+++ b/themes/appton/layouts/index.html
@@ -9,7 +9,7 @@
     {{ partial "hero.html" . }}
     {{ partial "clients.html" . }}
     {{ partial "meet-the-team.html" . }}
-    {{ partial "services.html" . }}
+    {{ partial "home-services.html" . }}
     {{ partial "portfolio.html" . }}
     {{ partial "get-started.html" . }}
     {{ partial "footer.html" . }}
