--- a/themes/appton/layouts/page/single.html
+++ b/themes/appton/layouts/page/single.html
@@ -7,7 +7,7 @@
     {{ partial "header.html" . }}
 
     <!-- Hero Section-->
-    <section class="hero">
+    <section class="hero bg-hero">
       <div class="container text-center">
         <h1>{{ .Page.Title }}</h1>
         <div class="row">
