--- a/themes/appton/layouts/partials/header.html
+++ b/themes/appton/layouts/partials/header.html
@@ -17,7 +17,7 @@
                 </li>
                 {{ end }}
       </ul>
-      <a href="#" data-toggle="modal" data-target="#contact" class="btn btn-outline-primary navbar-btn ml-0 ml-lg-3 rounded-pill text-uppercase">Contact</a>
+      <a href="/contact" class="btn btn-outline-primary navbar-btn ml-0 ml-lg-3 rounded-pill text-uppercase">Contact</a>
     </div>
   </div>
 </nav>
