--- a/themes/appton/layouts/partials/services.html
+++ b/themes/appton/layouts/partials/services.html
@@ -1,37 +1,54 @@
-    <section class="my-lg-5 bg-diagonal">
-      <div class="container">
-        <div class="text-center">
-          <h2 class="display-4">Services</h2>
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <p class="lead text-muted mt-2">We like to solve hard problems. Can you challenge us?</p>
+<section class="my-lg-2">
+  <div class="container">
+      <div class="integrations">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="box text-center">
+              <div class="icon d-flex align-items-end"><img src="/img/developer.svg" alt="..." class="img-fluid"></div>
+              <h3 class="h4">Consulting</h3>
+              <p class="font-weight-light">Get one of our experts to help your organisation. Whether it's a long term project or a short-term engagement.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="box text-center">
+              <div class="icon d-flex align-items-end"><img src="/img/brainstorming.svg" alt="..." class="img-fluid"></div>
+              <h3 class="h4">Workshops</h3>
+              <p class="font-weight-light">We facilitate workshops on cloud engineering, cloud development or containerization. Suitable for managers as well as engineers.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="box text-center">
+              <div class="icon d-flex align-items-end"><img src="/img/training.svg" alt="..." class="img-fluid"></div>
+              <h3 class="h4">Training</h3>
+              <p class="font-weight-light">Let us train your engineers and make them cloud ready. We have experience in creating and giving training.</p>
             </div>
           </div>
         </div>
-        <div class="integrations mt-3">
-          <div class="row">
+        <div class="row">
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="img/developer.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud consultancy</h3>
-                <p class="font-weight-light">Get one of our experts to help your organisation.</p>
+                <div class="icon d-flex align-items-end"><img src="/img/profit.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Cloud cost scan</h3>
+                <p class="font-weight-light">Cloud can be costly if it's not implemented correctly. We can give you insights and discover possibilities for cost saving.</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="img/brainstorming.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Productized services</h3>
-                <p class="font-weight-light">Kickstart your Cloud journey with one of our productized services.</p>
+                <div class="icon d-flex align-items-end"><img src="/img/startup.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Kickstart for Startups</h3>
+                <p class="font-weight-light">Succesful startups become scale-ups. But this requires huge investments in setting up cloud resources, CI/CD and monitoring and logging. We can do it in weeks and make sure you can manage it yourself.</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="img/training.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Workshops and training</h3>
-                <p class="font-weight-light">Become a Cloud expert, Kubernetes wizard or a DevOps guru.</p>
+                <div class="icon d-flex align-items-end"><img src="/img/tax.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Audit & second opinion</h3>
+                <p class="font-weight-light">Not sure you're making the right choices? Let us give you a second opinion. We promise it will be useful.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
+  {{ partial "get-started.html" . }}
