--- a/themes/appton/layouts/partials/careers.html
+++ b/themes/appton/layouts/partials/careers.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center">
       {{ range .Site.Data.careers.profiles }}
       <div class="col-md-4">
-        <div class="ml-5 mr-5">
+        <div class="mx-2">
         <div class="service-item text-left">
           <h4>{{ .name }}</h4>
           <p>{{ .text | markdownify }}</p>
@@ -16,11 +16,11 @@
       {{ end }}
     </div>
 </section>
-<section class="bg-primary text-white">
+<section class="">
       <div class="text-center">
         <h2>Did we trigger you?</h2>
         <p>Great! Writing texts is hard, especially for job offers. But now you're here, let's take the next step. Let's have a coffee (or a beer if you like).</p>
-        <a class="btn btn-outline-light mt-lg-5" href="/contact">Apply now</a>
+        <a class="btn btn-outline-primary mt-lg-2" href="/contact">Apply now</a>
       </div>
 </section>
 {{ end }}
