--- a/themes/appton/layouts/partials/footer.html
+++ b/themes/appton/layouts/partials/footer.html
@@ -2,10 +2,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 mb-5 mb-lg-0">
-            <div class="footer-logo"><img src="img/logo_text_right_white.png" alt="..." class="img-fluid"></div>
+            <div class="footer-logo"><img src="/img/logo_text_right_white.png" alt="..." class="img-fluid"></div>
           </div>
           <div class="col-lg-3 mb-5 mb-lg-0">
-            <h5 class="footer-heading">Site pages</h5>
+            <h5 class="footer-heading">Pages</h5>
             <ul class="list-unstyled">
                 {{ range .Site.Menus.footer }}
                 <li>
@@ -41,8 +41,6 @@
           <div class="row">
             <div class="col-lg-6 text-center text-lg-left">
               <p class="copyrights-text mb-3 mb-lg-0">&copy; 2019 Skyworkz</a></p>
-              <!-- If you want to remove the backlink, please purchase a license for this template @ https://bootstrapious.com/attribution-free-license. Big thanks!-->
-
             </div>
             <div class="col-lg-6 text-center text-lg-right">
               <ul class="list-inline social mb-0">
