--- a/themes/appton/layouts/partials/meet-the-team.html
+++ b/themes/appton/layouts/partials/meet-the-team.html
@@ -8,7 +8,7 @@
               <div class="col-lg-10">
                 <p class="lead divider-subtitle mt-2 text-muted">We're a bunch of professional nerds who like to make impact.</p>
               </div>
-            </div><a href="#" class="btn btn-primary">Learn More</a>
+            </div><a href="#" class="btn btn-primary">Curious who we are?</a>
           </div>
           <div class="col-lg-7 mt-5 mt-lg-0 mb-2 embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/Kila1FvQPXw?rel=0&amp;controls=0&amp;showinfo=0&amp;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
