--- a/themes/appton/layouts/partials/team.html
+++ b/themes/appton/layouts/partials/team.html
@@ -1,33 +1,12 @@
 <!-- Team Start -->
 <section id="portfolio-work">
     <div class="container">
-
-    <!-- Intro -->
-    <div class="row justify-content-center">
-      <div class="section-title text-center col-md-8 mx-3">
-        <h2 class="mb-3">{{ .Site.Data.team.title }}</h2>
-        <p>{{ .Site.Data.team.subtitle }}</p>
-      </div>
-    </div>
-
-
         <div class="row">
           <div class="col-md-12">
             <div class="block">
-              <div class="portfolio-menu">
-                <ul>
-                  {{ $categories := slice }}
-                  {{ range .Site.Data.team.members }}
-                    {{ $categories = $categories | append .category }}
-                  {{ end }}
-                    <li class="filter" data-filter="all">Everyone</li>
-                  {{ range ( $categories | uniq ) }}
-                    <li class="filter" data-filter=".{{ . }}">{{ . }}</li>
-                  {{ end }}
-                </ul>
-              </div>
               <div class="portfolio-content">
                 <ul id="portfolio-content-active">
+
 {{ $members := .Site.Data.team.members }}
 {{ $resources := .Resources.ByType "image"}}
 {{ range $resources }}
@@ -39,7 +18,7 @@
     {{ range $members}}
     {{ $id := urlize .name }}
     {{ if eq .image $imageName }}
-                    <li class="mix {{ .category }}">
+                    <li class="mix">
                             <a href="{{ $image600.RelPermalink }}" data-toggle="modal" data-target="#{{ $id }}">
                         <img class="img-responsive" src="{{ $image300.RelPermalink }}">
                         <div class="overlay">
