Fixed form, added blogs

--- a/themes/appton/layouts/partials/get-started.html
+++ b/themes/appton/layouts/partials/get-started.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mx-auto">
-            <form name="contact" data-netlify="true" method="POST" class="subscription-form mt-2">
+            <form name="miniform" data-netlify="true" method="POST" class="subscription-form mt-2">
               <div class="form-group">
                 <p class="d-none">
                     <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
