--- a/themes/appton/layouts/partials/contact.html
+++ b/themes/appton/layouts/partials/contact.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <form name="contact" data-netlify="true" method="POST">
+          <form name="contact-form" data-netlify="true" method="POST">
             <p class="d-none">
                 <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
             </p>
