--- a/themes/appton/layouts/partials/head.html
+++ b/themes/appton/layouts/partials/head.html
@@ -1,30 +1,33 @@
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ .Page.Title }} - {{ .Site.Title }}</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>{{ .Page.Title }} - {{ .Site.Title }}</title>
+  <meta name="description" content="{{ .Page.Description }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <meta name="content-language" content="all,follow">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 
-{{ hugo.Generator }}
-{{ $options := (dict "targetPath" "css/style.css" "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules")) }}
-{{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options }}
-  <link rel="stylesheet" href="{{ $style.Permalink }}">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800">
-<!-- Js -->
-{{ $main := resources.Get "js/main.js" }}
-{{ $plugins := resources.Get "js/plugins.js" }}
-{{ $jquery := resources.Get "js/jquery.js" }}
-{{ $bootstrap := resources.Get "js/bootstrap.js" }}
-{{ $lightbox := resources.Get "js/lightbox.js" }}
-{{ $owlcarousel := resources.Get "js/owl.carousel.js" }}
-{{ $defaultJS := slice $jquery $bootstrap $lightbox $plugins | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
-  <script src="{{ $defaultJS.Permalink }}"></script>
+  {{ hugo.Generator }}
+  {{ $options := (dict "targetPath" "css/style.css" "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules")) }}
+  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options }}
+    <link rel="stylesheet" href="{{ $style.Permalink }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800">
+  <!-- Js -->
+  {{ $main := resources.Get "js/main.js" }}
+  {{ $plugins := resources.Get "js/plugins.js" }}
+  {{ $jquery := resources.Get "js/jquery.js" }}
+  {{ $bootstrap := resources.Get "js/bootstrap.js" }}
+  {{ $lightbox := resources.Get "js/lightbox.js" }}
+  {{ $owlcarousel := resources.Get "js/owl.carousel.js" }}
+  {{ $defaultJS := slice $jquery $bootstrap $lightbox $plugins | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
+    <script src="{{ $defaultJS.Permalink }}"></script>
 
-{{ $owlJS := slice $owlcarousel | resources.Concat "js/owl.js" | resources.Fingerprint }}
-<script defer src="{{ $owlJS.Permalink }}"></script>
-{{ $mainJS := slice $main | resources.Concat "js/main.js" | resources.Fingerprint }}
-<script defer src="{{ $mainJS.Permalink }}"></script>
+  {{ $owlJS := slice $owlcarousel | resources.Concat "js/owl.js" | resources.Fingerprint }}
+  <script defer src="{{ $owlJS.Permalink }}"></script>
+  {{ $mainJS := slice $main | resources.Concat "js/main.js" | resources.Fingerprint }}
+  <script defer src="{{ $mainJS.Permalink }}"></script>
+
+  {{ partial "schema.html" . }}
