--- a/themes/appton/layouts/partials/schema.html
+++ b/themes/appton/layouts/partials/schema.html
@@ -32,7 +32,7 @@
       "sameAs": [
         "https://www.instagram.com/{{ .Site.Params.instagram }}",
         "https://twitter.com/{{ .Site.Params.twitter }}",
-        "https://github.com/{{ .Site.Params.github }}"
+        "https://github.com/{{ .Site.Params.github }}",
         "https://linkedin.com/{{ .Site.Params.linkedin }}"
       ]
     }
