--- a/themes/appton/layouts/partials/hero.html
+++ b/themes/appton/layouts/partials/hero.html
@@ -11,8 +11,8 @@
             </div>
             <div class="row">
               <div class="col">
-                <a href="#" class="btn btn-warning rounded-pill text-uppercase mr-2">Learn how</a>
-                <a href="#" class="btn btn-outline-primary rounded-pill text-uppercase">Get in contact</a>
+                <a href="/services" class="btn btn-warning rounded-pill text-uppercase mr-2">Learn how</a>
+                <a href="/contact" class="btn btn-outline-primary rounded-pill text-uppercase">Get in contact</a>
                 </div>
             </div>
           </div>
