--- a/themes/appton/layouts/partials/home-services.html
+++ b/themes/appton/layouts/partials/home-services.html
@@ -20,10 +20,10 @@
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/brainstorming.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Productized services</h3>
+                <h3 class="h4">Cloud jumpstart</h3>
                 <p class="font-weight-light">Kickstart your Cloud journey with one of our productized services.</p>
               </div>
-            </div>
+            </div>  
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/training.svg" alt="..." class="img-fluid"></div>
