--- a/themes/appton/layouts/partials/services.html
+++ b/themes/appton/layouts/partials/services.html
@@ -6,14 +6,14 @@
             <div class="box text-center">
               <div class="icon d-flex align-items-end"><img src="/img/developer.svg" alt="..." class="img-fluid"></div>
               <h3 class="h4">Consulting</h3>
-              <p class="font-weight-light">Get one of our experts to help your organisation. Whether it's a long term project or a short-term engagement.</p>
+              <p class="font-weight-light">Whether it's a long term project or a short-term engagement, developing serverless applications or building a cloud platform: we can help.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="box text-center">
               <div class="icon d-flex align-items-end"><img src="/img/brainstorming.svg" alt="..." class="img-fluid"></div>
               <h3 class="h4">Workshops</h3>
-              <p class="font-weight-light">We facilitate workshops on cloud engineering, cloud development or containerization. Suitable for managers as well as engineers.</p>
+              <p class="font-weight-light">We facilitate workshops on cloud engineering, serverless development or containerization. Suitable for managers as well as engineers.</p>
             </div>
           </div>
           <div class="col-lg-4">
