--- a/themes/appton/layouts/partials/portfolio.html
+++ b/themes/appton/layouts/partials/portfolio.html
@@ -1,12 +1,15 @@
 
-    <section class="my-lg-5">
+    <section class="my-lg-5" id="portfolio-work">
       <div class="container">
         <div class="text-center">
-          <h2 class="display-4">Portfolio</h2>
+          <h2 class="display-4">Our work</h2>
           <p class="lead text-muted mt-2">Learn more about our projects.</p>
         </div>
-        <div class="portfolio mt-5">
-          <div class="row">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="block">
+                      <div class="portfolio-content">
+                        <ul id="portfolio-content-active">
               {{ $portfolio := .Site.Data.work.portfolio }}
               {{ $resources := .Resources.ByType "image"}}
               {{ range $resources }}
@@ -18,12 +21,44 @@
                 {{ range $portfolio }}
                   {{ $id := urlize .name }}
                   {{ if eq .image $imageName }}
-                  <div class="col-lg-4 pb-3"><a href="{{ $image600.RelPermalink }}" data-lightbox="#{{ $id }}" data-title="{{ .name }}" class="portfolio-item"><img src="{{ $image380.RelPermalink }}" alt="image" class="img-fluid"></a></div>
-                  {{ end }}
-                {{ end }}
-              {{ end }}
-              {{ end }}
-          </div>
+                  <li class="mix">
+                    <a href="{{ $image600.RelPermalink }}" data-target="#{{ $id }}" data-title="{{ .name }}" data-toggle="modal" class="portfolio-item">
+                      <img src="{{ $image380.RelPermalink }}" alt="image" class="img-fluid">
+                      <div class="overlay">
+                          <div>
+                            <i class="fa fa-search fz-20"></i>
+                            <h2>{{ .name }}</h2>
+                            <p>{{ .teaser }}</p>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                  <div class="modal fade" id="{{ $id }}" tabindex="-1" role="dialog" aria-labelledby="{{ $id }}Title" aria-hidden="true">
+                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                                <h4 class="modal-title" id="{{ $id }}Title">{{ .teaser }}</h4>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                                {{ .description | markdownify  }}
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            {{ end }}
+            {{ end }}
+          {{ end }}
+          {{ end }}
+          </ul>
+        </div>
+        </div>
         </div>
       </div>
+    </div>
     </section>
