--- a/themes/appton/layouts/partials/schema.html
+++ b/themes/appton/layouts/partials/schema.html
@@ -1,29 +1,47 @@
+<!-- JSON-LD -->
+{{ if .IsHome }}
 <script type="application/ld+json">
-    {{ if eq .Section "blog" }}
-    {
-      "mainEntityOfPage": { "@type": "WebPage" },
-       "publisher": {
-        "@type": "Organization",
-        "name": {{ .Site.Params.header }},
-        "logo": {
-          "@type": "ImageObject",
-          "url": {{ .Site.Params.logo }}
-        }
-      },
-      "description": {{ .Summary | plainify | safeHTML }},
-      "keywords": [{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}]
+{ 
+  "@context": "http://schema.org", 
+  "@type": "WebSite", 
+  "url": "{{ .Permalink }}", 
+  "name": "{{ .Site.Title }}",
+  "author": {
+      "@type": "Person",
+      "name": "{{ .Site.Params.author }}"
     },
-    {{ end }}
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": {{ .Site.Params.header }},
-      "url": {{ .Site.BaseURL }},
-      "sameAs": [
-        "https://www.instagram.com/{{ .Site.Params.instagram }}",
-        "https://twitter.com/{{ .Site.Params.twitter }}",
-        "https://github.com/{{ .Site.Params.github }}",
-        "https://linkedin.com/{{ .Site.Params.linkedin }}"
-      ]
+  "description": "{{ .Site.Params.description }}",
+}
+</script>
+{{ end }}
+{{ if .IsPage }}
+    <script type="application/ld+json">
+    {{if eq .Section "blog"}}
+    { 
+        "@context": "http://schema.org", 
+        "@type": "BlogPosting",
+        "headline": "{{ .Title }}",
+        "genre": "{{ range .Params.tags }}{{ . }} {{ end }}",  
+        "url": "{{ .Permalink }}",
+        "datePublished": "{{ time .Date }}",
+        "description": "{{ .Description }}",
+        "author": {
+            "@type": "Person",
+            "name": "{{ .Site.Params.author }}"
+        }
     }
+    {{ else }}
+    { 
+      "@context": "http://schema.org", 
+      "@type": "WebSite", 
+      "url": "{{ .Permalink }}", 
+      "name": "{{ .Title }}",
+      "author": {
+          "@type": "Person",
+          "name": "{ .Site.Params.author }}"
+        },
+      "description": "{ .Site.Params.description }}",
+    }
+    {{ end }}
     </script>
+{{ end }}
