--- a/themes/appton/layouts/partials/schema.html
+++ b/themes/appton/layouts/partials/schema.html
@@ -23,7 +23,7 @@
         "headline": "{{ .Title }}",
         "genre": "{{ range .Params.tags }}{{ . }} {{ end }}",  
         "url": "{{ .Permalink }}",
-        "datePublished": "{{ time .Date }}",
+        "datePublished": "{{ dateFormat "2006-01-02T15:04:05CET" (default .Date (.PublishDate)) }}",
         "description": "{{ .Description }}",
         "author": {
             "@type": "Person",
