--- a/themes/appton/layouts/partials/footer.html
+++ b/themes/appton/layouts/partials/footer.html
@@ -14,23 +14,16 @@
                 {{ end }}
             </ul>
           </div>
-          <div class="col-lg-3 mb-5 mb-lg-0">
-            <h5 class="footer-heading">Services</h5>
+          <div class="col-lg- mb-5 mb-lg-0">
+            <h5 class="footer-heading">Latest blogposts</h5>
             <ul class="list-unstyled">
-                {{ range .Site.Menus.services }}
+                {{ $posts := where .Site.Pages "Type" "blog" }}
+                {{ range first 3 $posts }}
+                {{ if eq .Type "blog" }}
                 <li>
-                        <a class="footer-link" href="{{ .URL }}">{{ .Name }}</a>
+                        <a class="footer-link" href="{{ .Permalink }}">{{ .Name }}</a>
                 </li>
                 {{ end }}
-            </ul>
-          </div>
-          <div class="col-lg-3">
-            <h5 class="footer-heading">Resources</h5>
-            <ul class="list-unstyled">
-                {{ range .Site.Menus.resources }}
-                <li>
-                        <a class="footer-link" href="{{ .URL }}">{{ .Name }}</a>
-                </li>
                 {{ end }}
             </ul>
           </div>
