Added Calendly link

--- a/themes/appton/layouts/partials/footer.html
+++ b/themes/appton/layouts/partials/footer.html
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 text-center text-lg-left">
-              <p class="copyrights-text mb-3 mb-lg-0">&copy; 2019 Skyworkz</a></p>
+              <p class="copyrights-text mb-3 mb-lg-0">&copy; 2019 Skyworkz B.V.</a></p>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
               <ul class="list-inline social mb-0">
