--- a/themes/appton/layouts/partials/get-started.html
+++ b/themes/appton/layouts/partials/get-started.html
@@ -1,23 +1,20 @@
 
     <section class="my-lg-5 bg-diagonal">
       <div class="container text-center">
-        <h2 class="display-4">Get in contact</h2>
+        <h2 class="display-4">Get in touch</h2>
         <div class="row">
           <div class="col-lg-8 m-auto">
-            <p class="lead text-muted mt-2">If you leave your e-mail address here, we will contact you as soon as possible.</p>
+            <p class="lead text-muted mt-2">Do you want to know how we can help you? Let's have a quick chat.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 mx-auto">
-            <form name="miniform" data-netlify="true" method="POST" class="subscription-form mt-2">
-              <div class="form-group">
-                <p class="d-none">
-                    <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-                </p>
-                <input type="email" name="email" placeholder="name@company.com" class="form-control">
-                <button type="submit" class="btn btn-primary">Get Started</button>
-              </div>
-            </form>
+              <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+            <a class="btn btn-primary" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/bastichelaar/phonecall'});return false;">Schedule a phone call</a>
+            <!-- Calendly link widget end -->
+            </a>
           </div>
         </div>
       </div>
